--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -61,14 +61,14 @@
         "print(X)"
       ],
       "metadata": {
-        "id": "2D63YM4YwYvA",
-        "outputId": "bbaf489c-7477-4392-cb33-a55868c9d69a",
+        "id": "sJi_ZCyptRaw",
+        "outputId": "31b0cf98-fdde-415d-d26a-a625c9c92ced",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "id": "2D63YM4YwYvA",
-      "execution_count": 1,
+      "id": "sJi_ZCyptRaw",
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,14 +100,14 @@
         "print(a+b+c)"
       ],
       "metadata": {
-        "id": "oYAPDhehwkN7",
-        "outputId": "cb2e37cc-170c-4628-f551-6c5abfebe8b2",
+        "id": "6mFnIPk3ta0l",
+        "outputId": "24c24a6e-c442-46a2-ddcc-ace1745ec3a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "id": "oYAPDhehwkN7",
-      "execution_count": 2,
+      "id": "6mFnIPk3ta0l",
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,32 +132,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n",
-        "string=\"rishi\"\n",
-        "print(type(string))"
-      ],
-      "metadata": {
-        "id": "5DNquhDEwu_M",
-        "outputId": "e519f60a-c2bd-4cb2-a680-6af2ad7938fe",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "5DNquhDEwu_M",
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'str'>\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
@@ -166,38 +140,6 @@
       "outputs": [],
       "source": [
         "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a=10\n",
-        "b=4\n",
-        "print(a+b)\n",
-        "print(a-b)\n",
-        "print(a*b)\n",
-        "print(a/b)"
-      ],
-      "metadata": {
-        "id": "NBjP0zEW0dUk",
-        "outputId": "3e979312-c67a-41fe-b578-5bc55d2e7c1b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "NBjP0zEW0dUk",
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "14\n",
-            "6\n",
-            "40\n",
-            "2.5\n"
-          ]
-        }
       ]
     },
     {
@@ -214,37 +156,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "string_value =(\"123\")\n",
-        "integer_value=int(string_value)\n",
-        "float_value=float(string_value)\n",
-        "print(f\"string:{string_value}\")\n",
-        "print(f\"integer:{integer_value}\")\n",
-        "print(f\"float:{float_value}\")"
-      ],
-      "metadata": {
-        "id": "zRYzw0UZ1KfY",
-        "outputId": "293a9a4c-79a8-4734-a2a5-02968cf1532a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "zRYzw0UZ1KfY",
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "string:123\n",
-            "integer:123\n",
-            "float:123.0\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
@@ -253,31 +164,6 @@
       "outputs": [],
       "source": [
         "# Write a Python program to print the first character of a given string. (User input for the string)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "string=\"HELLO,WORLD\"\n",
-        "print(\"the first character in string is\",string[0])"
-      ],
-      "metadata": {
-        "id": "b30G9QVV2u3y",
-        "outputId": "abe68cb3-105a-4756-a6d5-14aabbe10c9c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "b30G9QVV2u3y",
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "the first character in string is H\n"
-          ]
-        }
       ]
     },
     {
@@ -294,31 +180,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "string= \"minnu\"\n",
-        "print(\"the length of the string\",len(string))"
-      ],
-      "metadata": {
-        "id": "3T4PzULP5Pv4",
-        "outputId": "0dc5ecd7-d6fe-443b-ff7e-4e71bd271479",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "3T4PzULP5Pv4",
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "the length of the string 5\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
       "metadata": {
@@ -327,34 +188,6 @@
       "outputs": [],
       "source": [
         "# Write a Python program to check if a given string contains only alphabets."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "string=\"minnu16\"\n",
-        "if string.isalpha():\n",
-        "    print(\"the string contains only alphabets.\")\n",
-        "else:\n",
-        "    print(\"the string contains other than alphabets.\")"
-      ],
-      "metadata": {
-        "id": "MH_-wZmp6Y1S",
-        "outputId": "15fe5674-3b10-424f-e21b-895bf9ba3d31",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "MH_-wZmp6Y1S",
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "the string contains other than alphabets.\n"
-          ]
-        }
       ]
     },
     {
@@ -371,33 +204,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "string1=\"hello\"\n",
-        "string2=\"world\"\n",
-        "concatenated_string=string1+string2\n",
-        "print(concatenated_string)"
-      ],
-      "metadata": {
-        "id": "9NIzPzVO7s_W",
-        "outputId": "bda7d951-7495-41a5-da8e-1abacee64427",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "9NIzPzVO7s_W",
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "helloworld\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
       "metadata": {
@@ -406,35 +212,6 @@
       "outputs": [],
       "source": [
         "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "string=\"123\"\n",
-        "index=string.find(\"abc\")\n",
-        "if index !=123:\n",
-        "  print(f\"the substring 'abc' is found at index{index}.\")\n",
-        "else:\n",
-        "  print(\"the substring'abc'is not found in the string\")\n"
-      ],
-      "metadata": {
-        "id": "Sa3rLElt8cl9",
-        "outputId": "26359640-ad23-4439-bbc7-6a728d5c0f89",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "Sa3rLElt8cl9",
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "the substring 'abc' is found at index-1.\n"
-          ]
-        }
       ]
     },
     {
@@ -451,35 +228,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "string=\"minnu16\"\n",
-        "uppercase_string=string.upper()\n",
-        "lowercase_string=string.lower()\n",
-        "print(\"uppercase:\",uppercase_string)\n",
-        "print(\"lowercase:\",lowercase_string)"
-      ],
-      "metadata": {
-        "id": "YcavwCcr_fSL",
-        "outputId": "719bb245-43a4-4acf-b8a5-60bab141b9ea",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "YcavwCcr_fSL",
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "uppercase: MINNU16\n",
-            "lowercase: minnu16\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
       "metadata": {
@@ -488,33 +236,6 @@
       "outputs": [],
       "source": [
         "# Write a Python program to count how many times a particular character appears in a string. (User input for string and character)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "string=\"minnu\"\n",
-        "character=\"n\"\n",
-        "count=string.count(character)\n",
-        "print(f\"the character{character}appears {count}time(s) in the string\")"
-      ],
-      "metadata": {
-        "id": "8QPeT_BVAwie",
-        "outputId": "fccf82ca-132a-4be2-8952-0438ae1472f7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "8QPeT_BVAwie",
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "the characternappears 2time(s) in the string\n"
-          ]
-        }
       ]
     },
     {
@@ -531,41 +252,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "name=\"minnu\"\n",
-        "print(f\"Hello,{name},Good morning!\")"
-      ],
-      "metadata": {
-        "id": "8TdzrCOaCQmc",
-        "outputId": "c2c0f356-4ea3-46ef-a59f-2eeeb27c692e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "8TdzrCOaCQmc",
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello,minnu,Good morning!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "OgPXbmOnFCns"
-      },
-      "id": "OgPXbmOnFCns",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
       "metadata": {
@@ -578,32 +264,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "a=1\n",
-        "b=2\n",
-        "print(a+b)"
-      ],
-      "metadata": {
-        "id": "Kdxc4oWqEd0d",
-        "outputId": "8961bccc-3f8e-4f05-d7da-453c052031a2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "Kdxc4oWqEd0d",
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "id": "0563b26c-0218-47b8-9035-98beb73b0931",
       "metadata": {
@@ -612,32 +272,6 @@
       "outputs": [],
       "source": [
         "# Write a Python program to format and display a string containing the user's name and age. (User input required)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "name=\"usha\"\n",
-        "age=\"20\"\n",
-        "print(f\"Hello,{name}!you are{age} years old.\")"
-      ],
-      "metadata": {
-        "id": "PvwN9iDeFE2Z",
-        "outputId": "b24b22e2-e376-4bd3-cf34-6cd9a255debf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "PvwN9iDeFE2Z",
-      "execution_count": 35,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello,usha!you are20 years old.\n"
-          ]
-        }
       ]
     },
     {
@@ -659,18 +293,8 @@
       },
       "outputs": [],
       "source": [
-        "# ositive, negWrite a Python program that takes a number as input and checks whether it is pative, or zero."
+        "# Write a Python program that takes a number as input and checks whether it is positive, negative, or zero."
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "xuckOCOnIXBJ"
-      },
-      "id": "xuckOCOnIXBJ",
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -686,34 +310,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "num1=10\n",
-        "num2=20\n",
-        "num3=30\n",
-        "maximum=max(num1,num2,num3)\n",
-        "print(f\"the maximum number is:{maximum}\")"
-      ],
-      "metadata": {
-        "id": "Qg3AdATjJKlE",
-        "outputId": "29bcf26f-acd2-4172-fd22-b8cb9a4e525c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "Qg3AdATjJKlE",
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "the maximum number is:30\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
       "metadata": {
@@ -722,42 +318,6 @@
       "outputs": [],
       "source": [
         "# Write a Python program to check if a year is a leap year. (User input for the year)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "NQ14qrznMaIR"
-      },
-      "id": "NQ14qrznMaIR"
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "year=2023\n",
-        "if (year % 400!=0):\n",
-        "  print(\"the year is a leap year\")\n",
-        "else:\n",
-        "  print(\"the year is not a leap year\")"
-      ],
-      "metadata": {
-        "id": "fCbFaU25Kq6b",
-        "outputId": "61315bea-4403-45df-9be9-42917b58fd9d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "fCbFaU25Kq6b",
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "the year is a leap year\n"
-          ]
-        }
       ]
     },
     {
@@ -774,34 +334,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "number=15\n",
-        "if number % 3==0 and number % 5==0:\n",
-        "  print(f\"the number{number} is divisible by both 3 and 5\")\n",
-        "else:\n",
-        "  print(f\"the number{number} is not divisible by both 3 and 5\")"
-      ],
-      "metadata": {
-        "id": "ILevWZk6NQc4",
-        "outputId": "2f7a7337-f415-425c-ba7c-81c646fcbd97",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "ILevWZk6NQc4",
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "the number15 is divisible by both 3 and 5\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "id": "d10c9005-b85d-42f9-81d0-65d149415888",
       "metadata": {
@@ -811,16 +343,6 @@
       "source": [
         "# Write a Python program to check if a string is a palindrome. (User input for the string)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "VO4zN396OaUa"
-      },
-      "id": "VO4zN396OaUa",
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
