--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -68,7 +68,7 @@
         }
       },
       "id": "sJi_ZCyptRaw",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +107,7 @@
         }
       },
       "id": "6mFnIPk3ta0l",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,6 +144,38 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "a=5\n",
+        "b=5\n",
+        "print(a+b)\n",
+        "print(a-b)\n",
+        "print(a*b)\n",
+        "print(a/b)"
+      ],
+      "metadata": {
+        "id": "i_k2zfr3um6q",
+        "outputId": "ae422d89-ef32-48f2-dd6d-f3d1ce1435dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "i_k2zfr3um6q",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "0\n",
+            "25\n",
+            "1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
@@ -156,6 +188,16 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8Q58xg-3vF4L"
+      },
+      "id": "8Q58xg-3vF4L",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
@@ -165,6 +207,16 @@
       "source": [
         "# Write a Python program to print the first character of a given string. (User input for the string)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "avXoDiMQui-b"
+      },
+      "id": "avXoDiMQui-b",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
